--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.5.0",
     "expo": "~54.0.23",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
