--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2"
+    "react-native-safe-area-context": "^5.6.2",
+    "expo-calendar": "~15.0.8"
   },
   "private": true
 }
